--- a/all.html
+++ b/all.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style/all.css" >
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+        body{
+       background: url('images/background.jpg') no-repeat center;}
         </style>
     <title>Books I Read</title>
 </head>
