--- a/all.html
+++ b/all.html
@@ -78,7 +78,7 @@
     <tr><td>7 Habits of Highly Effective People</td>  <td>Stephen Covey</td>  <td >Read it online</td></tr>
    
    
-</table>
+</table> <br>
 </div>
 
 </body>
