--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
       <p> I Am Malala is an autobiography of noble peace prize winner Malala Yousafzai.
         I read this book when I was just new to book reading and was trying to explore different genres of Books</p>
     </span>
-    <div class="column" style="background-color:rgb(224, 181, 253); padding-bottom:25px;">
+    <div class="column" style="background-color:rgb(224, 181, 253);">
       <h2>A Suitable Boy</h2>
       <p>A suitable boy is written by Vikram Seth.
         This is the longest novel I have read till now. It is a tale that revolves around finding a groom for Lata, set in newly independent India. </p>
+    A Suitable Boy proved to be a great read.
     </div>
     <div class="column" style="background-color:rgb(173, 241, 224);">
       <h2>Secret Seven Series</h2>
