--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <div class="column" style="background-color:rgb(224, 181, 253);">
       <h2>A Suitable Boy</h2>
       <p>A suitable boy is written by Vikram Seth.
-        This is the longest novel I have read till now. It is a tale that revolves around finding a groom for Lata, set in newly independent India. </p>
-    A Suitable Boy proved to be a great read.
+        This is the longest novel I have read till now. It is a tale that revolves around finding a groom for Lata, set in newly independent India.  A Suitable Boy proved to be a great read.</p>
+   
     </div>
     <div class="column" style="background-color:rgb(173, 241, 224);">
       <h2>Secret Seven Series</h2>
